# http_server/docs/swagger.yaml
@@ -1,9 +1,224 @@
-basePath: /cmd/
+basePath: /
+definitions:
+  types.GetResultObjectHandlerResponse:
+    properties:
+      result:
+        type: string
+    type: object
+  types.GetStatusObjectHandlerResponse:
+    properties:
+      status:
+        type: string
+    type: object
+  types.PostTaskObjectHandlerRequest:
+    properties:
+      code:
+        type: string
+      translator:
+        type: string
+    type: object
+  types.PostTaskObjectHandlerResponse:
+    properties:
+      task_id:
+        type: string
+    type: object
+  types.PostUserLoginObjectHandlerResponse:
+    properties:
+      token:
+        type: string
+    type: object
+  types.PostUserObjectHandlerRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  types.PostUserRegisterObjectHandlerResponse:
+    type: object
 host: localhost:8080
 info:
   contact: {}
   description: This is a sample server.
   title: My API
   version: "1.0"
-paths: {}
+paths:
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: post login
+      parameters:
+      - description: login and password
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/types.PostUserObjectHandlerRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/types.PostUserLoginObjectHandlerResponse'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "404":
+          description: Object not found
+          schema:
+            type: string
+        "500":
+          description: Internal error
+          schema:
+            type: string
+      tags:
+      - user
+  /register:
+    post:
+      consumes:
+      - application/json
+      description: post register
+      parameters:
+      - description: login and password
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/types.PostUserObjectHandlerRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/types.PostUserRegisterObjectHandlerResponse'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "404":
+          description: Object not found
+          schema:
+            type: string
+        "500":
+          description: Internal error
+          schema:
+            type: string
+      tags:
+      - user
+  /result/{task_id}:
+    get:
+      description: get result
+      parameters:
+      - description: Task id
+        in: path
+        name: task_id
+        required: true
+        type: string
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "102":
+          description: Processing
+          schema:
+            type: string
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.GetResultObjectHandlerResponse'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "404":
+          description: Object not found
+          schema:
+            type: string
+        "500":
+          description: Internal error
+          schema:
+            type: string
+      tags:
+      - task
+  /status/{task_id}:
+    get:
+      description: get status
+      parameters:
+      - description: Task id
+        in: path
+        name: task_id
+        required: true
+        type: string
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.GetStatusObjectHandlerResponse'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "404":
+          description: Object not found
+          schema:
+            type: string
+        "500":
+          description: Internal error
+          schema:
+            type: string
+      tags:
+      - task
+  /task:
+    post:
+      consumes:
+      - application/json
+      description: post task
+      parameters:
+      - description: code params
+        in: body
+        name: duration
+        required: true
+        schema:
+          $ref: '#/definitions/types.PostTaskObjectHandlerRequest'
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/types.PostTaskObjectHandlerResponse'
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "404":
+          description: Object not found
+          schema:
+            type: string
+        "500":
+          description: Internal error
+          schema:
+            type: string
+      tags:
+      - task
 swagger: "2.0"
